log/build_2021-07-10_19-05-06/digger_motor_node/stdout_stderr.log
/home/usr/.local/lib/python3.6/site-packages/setuptools/dist.py:651: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  % (opt, underscore_opt))
/home/usr/.local/lib/python3.6/site-packages/setuptools/dist.py:651: UserWarning: Usage of dash-separated 'install-scripts' will not be supported in future versions. Please use the underscore name 'install_scripts' instead
  % (opt, underscore_opt))
running develop
/home/usr/.local/lib/python3.6/site-packages/setuptools/dist.py:651: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  % (opt, underscore_opt))
/home/usr/.local/lib/python3.6/site-packages/setuptools/dist.py:651: UserWarning: Usage of dash-separated 'install-scripts' will not be supported in future versions. Please use the underscore name 'install_scripts' instead
  % (opt, underscore_opt))
running egg_info
writing ../../../build/digger_motor_node/digger_motor_node.egg-info/PKG-INFO
writing dependency_links to ../../../build/digger_motor_node/digger_motor_node.egg-info/dependency_links.txt
writing entry points to ../../../build/digger_motor_node/digger_motor_node.egg-info/entry_points.txt
writing requirements to ../../../build/digger_motor_node/digger_motor_node.egg-info/requires.txt
writing top-level names to ../../../build/digger_motor_node/digger_motor_node.egg-info/top_level.txt
reading manifest file '../../../build/digger_motor_node/digger_motor_node.egg-info/SOURCES.txt'
writing manifest file '../../../build/digger_motor_node/digger_motor_node.egg-info/SOURCES.txt'
running build
running build_py
copying digger_motor_node/digger_motor_controller.py -> /home/usr/usr_ws_2020/build/digger_motor_node/build/lib/digger_motor_node
running install
running install_lib
copying /home/usr/usr_ws_2020/build/digger_motor_node/build/lib/digger_motor_node/digger_motor_controller.py -> /home/usr/usr_ws_2020/install/digger_motor_node/lib/python3.6/site-packages/digger_motor_node
byte-compiling /home/usr/usr_ws_2020/install/digger_motor_node/lib/python3.6/site-packages/digger_motor_node/digger_motor_controller.py to digger_motor_controller.cpython-36.pyc
  File "/home/usr/usr_ws_2020/install/digger_motor_node/lib/python3.6/site-packages/digger_motor_node/digger_motor_controller.py", line 6
    To get the full path to the directory a Python file is contained in, write this in that file:
         ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/usr/usr_ws_2020/install/digger_motor_node/lib/python3.6/site-packages/digger_motor_node-0.0.0-py3.6.egg-info' (and everything under it)
Copying ../../../build/digger_motor_node/digger_motor_node.egg-info to /home/usr/usr_ws_2020/install/digger_motor_node/lib/python3.6/site-packages/digger_motor_node-0.0.0-py3.6.egg-info
running install_scripts
Installing digger_motor_controller script to /home/usr/usr_ws_2020/install/digger_motor_node/lib/digger_motor_node
writing list of installed files to '/home/usr/usr_ws_2020/build/digger_motor_node/install.log'
